; ModuleID = '/home/carl/AnghaBench/systemd/src/resolve/extr_resolved-dns-transaction.c_pick_new_id.c'
source_filename = "/home/carl/AnghaBench/systemd/src/resolve/extr_resolved-dns-transaction.c_pick_new_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@TRANSACTIONS_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_3__*)* @pick_new_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @pick_new_id(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load i32, i32* @TRANSACTIONS_MAX, align 4
  %5 = icmp slt i32 %4, 65535
  %6 = zext i1 %5 to i32
  %7 = call i32 @assert_cc(i32 %6)
  br label %8

8:                                                ; preds = %21, %1
  %9 = call i32 @random_bytes(i64* %3, i32 8)
  br label %10

10:                                               ; preds = %8
  %11 = load i64, i64* %3, align 8
  %12 = icmp eq i64 %11, 0
  br i1 %12, label %21, label %13

13:                                               ; preds = %10
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i64, i64* %3, align 8
  %18 = call i32 @UINT_TO_PTR(i64 %17)
  %19 = call i64 @hashmap_get(i32 %16, i32 %18)
  %20 = icmp ne i64 %19, 0
  br label %21

21:                                               ; preds = %13, %10
  %22 = phi i1 [ true, %10 ], [ %20, %13 ]
  br i1 %22, label %8, label %23

23:                                               ; preds = %21
  %24 = load i64, i64* %3, align 8
  ret i64 %24
}

declare dso_local i32 @assert_cc(i32) #1

declare dso_local i32 @random_bytes(i64*, i32) #1

declare dso_local i64 @hashmap_get(i32, i32) #1

declare dso_local i32 @UINT_TO_PTR(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
